fix: align the location button to its content to the left

--- a/art-gallery-website/scss/main.scss
+++ b/art-gallery-website/scss/main.scss
@@ -61,30 +61,30 @@ body {
             }
         }
 
-        a {
-            align-self: flex-start;
-            font-weight: 700;
-            padding: 2.4rem 3.2rem;
-            padding-right: 0;
-            font-family: "Big Shoulders Display", sans-serif;
-            transition: background-color 500ms;
-
-            .arrow {
+        div {
+            a {
+                align-self: flex-start;
+                font-weight: 700;
+                padding: 2.4rem 3.2rem;
+                padding-right: 0;
+                font-family: "Big Shoulders Display", sans-serif;
                 transition: background-color 500ms;
-                padding: 2.68rem;
-                padding-right: 2rem;
-                padding-bottom: 2.63rem;
-                background-color: $bg-gold;
-                height: 100%;
-                margin-left: 3.5rem;
-                font-weight: normal;
-            }
-            
-            &:hover {
-                background-color: $bg-gold;
-    
+
                 .arrow {
-                    background-color: $bg-almost-dark;
+                    transition: background-color 500ms;
+                    padding: 2.4rem;
+                    background-color: $bg-gold;
+                    height: 100%;
+                    margin-left: 3.5rem;
+                    font-weight: normal;
+                }
+                
+                &:hover {
+                    background-color: $bg-gold;
+        
+                    .arrow {
+                        background-color: $bg-almost-dark;
+                    }
                 }
             }
         }
@@ -117,6 +117,7 @@ body {
                 gap: 4.8rem;
                 position: relative;
                 left: -5rem;
+                bottom: 5rem;
                 
                 .arrow {
                     padding-top: 2.6rem;
@@ -156,7 +157,7 @@ body {
             .hero-content {
                 align-items: center;
                 position: static;
-                padding-bottom: 13rem;
+                padding-bottom: 22rem;
 
                 .logo-container {
                     position: absolute;
@@ -171,10 +172,14 @@ body {
                     }
                 }
 
-                p,
-                a {
+                p {
                     position: relative;
                     left: -5rem;
+                }
+
+                div {
+                    position: relative;
+                    left: -12rem;
                 }
             }
         }
